# PhotoPick

./: .gitignore  README.md  photopick.py  pyproject.toml  requirements.txt
.github/workflows/: web-deploy.yml
assets/: PhotoPick.icns
photopick/: __init__.py  __main__.py
photopick/core/: thumbs.py
photopick/ui/: app.py  folder_drop_label.py  inbox_view.py  main_window.py  orphans_view.py  styles.py
raw_organizer/: __init__.py  __main__.py
raw_organizer/core/: __init__.py  matcher.py  scanner.py  thumbs.py
raw_organizer/ui/: app.py  inbox_view.py  main_window.py  orphans_view.py
scripts/: _launcher.py  build_macos.sh
web/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/app/zh/: page.tsx
web/components/: DownloadCTA.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HtmlLangSetter.tsx  JsonLd.tsx  LangToggle.tsx  Screenshots.tsx  SupportedCameras.tsx  ThemeToggle.tsx
web/lib/: i18n.ts
