[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raw-organizer"
version = "0.2.0"
description = "Mac app for organizing RAW/JPG pairs and routing shots into Lightroom"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "PySide6>=6.6",
    "rawpy>=0.19",
    "Pillow>=10.0",
    "send2trash>=1.8",
]

[project.scripts]
raw-organizer = "raw_organizer.__main__:main"

[project.gui-scripts]
raw-organizer-app = "raw_organizer.ui.app:main"

[tool.setuptools.packages.find]
include = ["raw_organizer*"]

# ---------------------------------------------------------------------
# Briefcase packaging — produces a standalone macOS .app bundle.
# Run:  briefcase create  &&  briefcase build  &&  briefcase package macOS
# ---------------------------------------------------------------------
[tool.briefcase]
project_name = "Raw Organizer"
bundle = "local.rawOrganizer"
version = "0.2.0"
url = "https://github.com/dereklu/Raw-Organizer"
license.file = "LICENSE"
author = "Derek Lu"
author_email = "tclu6479lu@gmail.com"

[tool.briefcase.app.raw_organizer]
formal_name = "Raw Organizer"
description = "Organize RAW/JPG pairs and route shots into Lightroom"
sources = ["raw_organizer"]
requires = [
    "rawpy>=0.19",
    "Pillow>=10.0",
    "send2trash>=1.8",
]

[tool.briefcase.app.raw_organizer.macOS]
universal_build = false
requires = [
    "PySide6>=6.6",
]
