[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photopick"
version = "0.3.1"
description = "Mac app for organizing RAW/JPG pairs and routing shots into Lightroom"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "PySide6>=6.6",
    "rawpy>=0.19",
    "Pillow>=10.0",
    "send2trash>=1.8",
]

[project.scripts]
photopick = "photopick.__main__:main"

[project.gui-scripts]
photopick-app = "photopick.ui.app:main"

[tool.setuptools.packages.find]
include = ["photopick*"]

# ---------------------------------------------------------------------
# Briefcase packaging — produces a standalone macOS .app bundle.
# Run:  briefcase create  &&  briefcase build  &&  briefcase package macOS
# ---------------------------------------------------------------------
[tool.briefcase]
project_name = "PhotoPick"
bundle = "local.photoPick"
version = "0.3.1"
url = "https://github.com/derekdylu/PhotoPick"
license.file = "LICENSE"
author = "Derek Lu"
author_email = "tclu6479lu@gmail.com"

[tool.briefcase.app.photopick]
formal_name = "PhotoPick"
description = "Organize RAW/JPG pairs and route shots into Lightroom"
sources = ["photopick"]
requires = [
    "rawpy>=0.19",
    "Pillow>=10.0",
    "send2trash>=1.8",
]

[tool.briefcase.app.photopick.macOS]
universal_build = false
requires = [
    "PySide6>=6.6",
]
